# macschedule

./: .gitignore  README.md  pyproject.toml
examples/: example_job.yaml  example_job_1.yaml  example_job_2.yaml  example_job_3.yaml  local.username.ms.MyExampleJob.agent.plist  local.username.ms.MyExampleJob1.agent.plist  local.username.ms.MyExampleJob2.agent.plist  local.username.ms.MyExampleJob3.agent.plist
macschedule/: cli.py  constants.py  cron.py  generate.py  job_configs.py  launchd_configs.py  logs.py  operate.py
