[build-system]
requires = [
  "setuptools>=64"
]
build-backend = "setuptools.build_meta"

[project]
name = "macschedule"
version = "0.1.1"
authors = [
  { name = "Jez Smith", email = "j.smith.03@cantab.net" },
]
description = "CLI utility for batch creating launchd agents on MacOS"
license = { file = "LICENSE.md" }
readme = "README.md"
dependencies = [
  "click",
  "cron-converter>=1.0.0",
  "dacite>=1.8.0",
  "lxml>=5.0.0",
  "pyyaml",
]
requires-python = ">= 3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
]

[project.scripts]
msch = "macschedule.cli:cli"

[project.urls]
Homepage = "https://github.com/jzmnd/macschedule"
